Adding logo and changing page to ta new tab.

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,23 @@
 {
-    "manifest_version": 3,
-    "name": "JSON Formatter",
-    "version": "1.0",
-    "description": "Open a separate window to parse and format JSON.",
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_title": "Open JSON Formatter"
-    },
-    "permissions": ["storage"]
+  "manifest_version": 3,
+  "name": "JSON Formatter",
+  "version": "1.0",
+  "description": "Open a separate window to parse and format JSON.",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_title": "Open JSON Formatter",
+    "default_icon": {
+      "16": "images/icon_16.png",
+      "48": "images/icon_48.png",
+      "128": "images/icon_128.png"
+    }
+  },
+  "permissions": ["storage"],
+  "icons": {
+    "16": "images/icon_16.png",
+    "48": "images/icon_48.png",
+    "128": "images/icon_128.png"
   }
+}
