Correcting the repo address

--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,6 @@
   "homepage_url": "https://www.arunsyoga.in", 
   "developer": {
     "name": "ArunWebber",
-    "url": "https://github.com/arunwebber/search-helper"
+    "url": "https://github.com/arunwebber/json-parser.git"
   }
 }
