--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "128": "images/icon_128.png"
     }
   },
-  "permissions": ["storage"],
+  "permissions": ["tabs"],
   "icons": {
     "16": "images/icon_16.png",
     "48": "images/icon_48.png",
