--- a/manifest.json
+++ b/manifest.json
@@ -21,8 +21,5 @@
     "128": "images/icon_128.png"
   },
   "homepage_url": "https://www.arunsyoga.in", 
-  "developer": {
-    "name": "ArunWebber",
-    "url": "https://github.com/arunwebber/json-parser.git"
-  }
+  "author": "HashPalLabs"
 }
