Changing Url and version

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "JSON Formatter",
-  "version": "1.1",
+  "version": "1.1.1",
   "description": "Open a separate window to parse and format JSON.",
   "background": {
     "service_worker": "background.js"
@@ -19,6 +19,6 @@
     "48": "images/icon_48.png",
     "128": "images/icon_128.png"
   },
-  "homepage_url": "https://www.arunsyoga.in",
+  "homepage_url": "https://hashpallabs.com/",
   "author": "HashPalLabs"
 }
